--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
+    "@types/jest-axe": "^3.5.9",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -27,6 +28,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "jest-axe": "^9.0.0",
     "jsdom": "^24.1.1",
     "postcss": "^8",
     "postcss-import": "^16.1.0",
